--- a/GoToApp/bin/AndroidManifest.xml
+++ b/GoToApp/bin/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <uses-sdk
         android:minSdkVersion="13"
         android:targetSdkVersion="19" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -27,12 +28,21 @@
             android:name="com.destination.gotoapp.GroupDetailActivity"
             android:label="@string/title_activity_group_detail" >
             <intent-filter>
-                <action android:name="com.destination.gotoapp.GroupDetailActivity"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="com.destination.gotoapp.GroupDetailActivity" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name="com.facebook.LoginActivity"/>
-        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+        <activity android:name="com.facebook.LoginActivity" />
+
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
+
+        <activity
+            android:name="com.destination.gotoapp.GetUserFacebookActivity"
+            android:label="@string/title_activity_get_user_facebook" >
+        </activity>
     </application>
 
 </manifest>
