--- a/GoToApp/.classpath
+++ b/GoToApp/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/Ryan/Downloads/joda-time-2.3-dist/joda-time-2.3/joda-time-2.3.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
